--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ numpy==2.3.1
 matplotlib==3.10.3
 seaborn==0.13.2
 plotly==6.2.0
+flask>=2.3.0
+flask-socketio>=5.3.0
+yfinance>=0.2.0
+cryptography>=40.0.0
