--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,13 @@ flask>=2.3.0
 flask-socketio>=5.3.0
 yfinance>=0.2.0
 cryptography>=40.0.0
+python-socketio>=5.8.0
+python-dotenv>=1.0.0
+fredapi>=0.5.0
+aiohttp>=3.8.5
+asyncio-throttle>=1.0.2
+websockets>=11.0.3
+Werkzeug>=2.3.7
+eventlet>=0.33.3
+gevent>=23.7.0
+gevent-websocket>=0.10.1
