--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-requests==2.32.4
-pandas==2.3.1
-numpy==2.3.1
-matplotlib==3.10.3
-seaborn==0.13.2
-plotly==6.2.0
-flask>=2.3.0
-flask-socketio>=5.3.0
-yfinance>=0.2.0
-cryptography>=40.0.0
-python-socketio>=5.8.0
-python-dotenv>=1.0.0
-fredapi>=0.5.0
-aiohttp>=3.8.5
-asyncio-throttle>=1.0.2
-websockets>=11.0.3
-Werkzeug>=2.3.7
-eventlet>=0.33.3
-gevent>=23.7.0
-gevent-websocket>=0.10.1
+Flask==2.3.3
+Flask-SocketIO==5.3.6
+python-socketio==5.8.0
+python-engineio==4.7.1
+requests==2.31.0
+pandas==2.0.3
+numpy==1.24.4
+yfinance==0.2.18
+python-dotenv==1.0.0
+Werkzeug==2.3.7
+eventlet==0.33.3
