feat: 누락된 패키지 추가 및 배포 상태 문서화

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ python-engineio==4.7.1
 requests==2.31.0
 pandas==2.0.3
 numpy==1.24.4
+matplotlib==3.7.2
 yfinance==0.2.18
 python-dotenv==1.0.0
 Werkzeug==2.3.7
 eventlet==0.33.3
+fredapi==0.5.0
