--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,24 @@
-Flask==2.3.3
-Flask-SocketIO==5.3.6
-python-socketio==5.8.0
-python-engineio==4.7.1
-requests==2.31.0
-pandas==2.0.3
-numpy==1.24.4
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
-yfinance==0.2.18
-python-dotenv==1.0.0
-Werkzeug==2.3.7
-eventlet==0.33.3
-fredapi==0.5.0
-aiohttp==3.8.5
-asyncio-throttle==1.0.2
-websockets==11.0.3
-gevent==23.7.0
-gevent-websocket==0.10.1
-cryptography==40.0.2
-urllib3==2.0.4
-scikit-learn==1.3.2
-scipy==1.11.4
-joblib==1.3.2
-threadpoolctl==3.2.0
-kiwisolver==1.4.5
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3
-six==1.16.0
-cycler==0.12.1
-fonttools==4.44.0
-packaging==23.2
-pillow==10.1.0
-contourpy==1.2.0
+Flask
+Flask-SocketIO
+python-socketio
+python-engineio
+requests
+pandas
+numpy
+matplotlib
+seaborn
+plotly
+yfinance
+python-dotenv
+Werkzeug
+eventlet
+fredapi
+aiohttp
+asyncio-throttle
+websockets
+gevent
+gevent-websocket
+cryptography
+urllib3
+scikit-learn
+scipy
